<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".simpleroadchecker.SimpleRoadCheckerActivity">

    <TextView
            android:id="@+id/title_textview"
            android:text="@string/simple_road_checker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/title_textview" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:background="@android:color/black" android:id="@+id/linearLayout"/>

    <TextView
            android:id="@+id/tfl_subtitle"
            android:text="@string/tlf_status_check"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintVertical_bias="0.033"/>
    <EditText
            android:id="@+id/road_id_edit_text"
            android:hint="@string/insert_road_id_here_str"
            android:inputType="text"
            android:autofillHints="@string/autofill_hint_road_id"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tfl_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/tfl_subtitle" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/refresh_button" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/road_display_name_title_tv"
            android:text="@string/road_display_name_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.103"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/road_id_edit_text"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/refresh_button"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/road_display_name_content_tv"
            tools:text="Road Display Name Content"
            android:text="@string/no_data"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            app:layout_constraintStart_toStartOf="@+id/road_display_name_title_tv"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/road_display_name_title_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/refresh_button"
            app:layout_constraintVertical_bias="0.004"/>

    <TextView
            android:text="@string/road_status_title_str"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/road_status_title_textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.086"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/road_display_name_content_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/refresh_button"
            app:layout_constraintVertical_bias="0.028"/>
    <TextView
            android:id="@+id/road_status_content_tv"
            tools:text="Good"
            android:text="@string/no_data"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/road_status_title_textView"
            app:layout_constraintStart_toStartOf="@+id/road_status_title_textView"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/refresh_button"
            app:layout_constraintVertical_bias="0.006"/>
    <TextView
            android:id="@+id/road_status_severity_title_tv"
            android:text="@string/status_severity_descrition_subtitle"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/road_status_content_tv"
            app:layout_constraintVertical_bias="0.052" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.161"/>
    <TextView
            android:id="@+id/road_status_severity_description_content_tv"
            tools:text="No Exceptional Delays"
            android:textSize="12sp"
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/road_status_severity_title_tv"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/road_status_severity_title_tv"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/refresh_button"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:id="@+id/refresh_button"
            android:text="@string/refresh_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>